Fixed the overlap in team member's name / photo

--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -37,9 +37,12 @@
   // Some magic numbers for sizing & text-container-sizing
   // for hero banners with images on desktop
   @include breakpoint(from-medium) {
-    &--post #{$self}__text,
-    &__text--with-image {
+    &--post #{$self}__text {
       max-width: 66%;
+    }
+
+    &__text--with-image {
+      max-width: 55%;
     }
   }
 
